Tarea/MiGramaticaParser.py
# Generated from MiGramatica.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiGramaticaParser ( Parser ):

    grammarFileName = "MiGramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'for'", "'('", "')'", "'='", "'int'", 
                     "'float'", "'var'", "'{'", "'}'", "'if'", "'else'", 
                     "'>'", "'<'", "'=='", "'!='", "'>='", "'<='", "'++'", 
                     "'--'", "'*'", "'/'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "INT", "WS" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_forStmt = 2
    RULE_declaracion = 3
    RULE_tipo = 4
    RULE_bloque = 5
    RULE_ifElseStmt = 6
    RULE_condicion = 7
    RULE_asignacion = 8
    RULE_expresionIncremento = 9
    RULE_expr = 10

    ruleNames =  [ "programa", "sentencia", "forStmt", "declaracion", "tipo", 
                   "bloque", "ifElseStmt", "condicion", "asignacion", "expresionIncremento", 
                   "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    ID=25
    INT=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiGramaticaParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiGramaticaParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiGramaticaParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiGramaticaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = MiGramaticaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 22
                self.sentencia()
                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 23
                    self.match(MiGramaticaParser.T__0)


                self.state = 28 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 33556996) != 0)):
                    break

            self.state = 30
            self.match(MiGramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifElseStmt(self):
            return self.getTypedRuleContext(MiGramaticaParser.IfElseStmtContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(MiGramaticaParser.AsignacionContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(MiGramaticaParser.ForStmtContext,0)


        def bloque(self):
            return self.getTypedRuleContext(MiGramaticaParser.BloqueContext,0)


        def getRuleIndex(self):
            return MiGramaticaParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = MiGramaticaParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 36
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.ifElseStmt()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.asignacion()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 34
                self.forStmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 35
                self.bloque()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiGramaticaParser.RULE_forStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ForLoopRuleContext(ForStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.ForStmtContext
            super().__init__(parser)
            self.cuerpo = None # SentenciaContext
            self.copyFrom(ctx)

        def sentencia(self):
            return self.getTypedRuleContext(MiGramaticaParser.SentenciaContext,0)

        def asignacion(self):
            return self.getTypedRuleContext(MiGramaticaParser.AsignacionContext,0)

        def declaracion(self):
            return self.getTypedRuleContext(MiGramaticaParser.DeclaracionContext,0)

        def condicion(self):
            return self.getTypedRuleContext(MiGramaticaParser.CondicionContext,0)

        def expresionIncremento(self):
            return self.getTypedRuleContext(MiGramaticaParser.ExpresionIncrementoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoopRule" ):
                listener.enterForLoopRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoopRule" ):
                listener.exitForLoopRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForLoopRule" ):
                return visitor.visitForLoopRule(self)
            else:
                return visitor.visitChildren(self)



    def forStmt(self):

        localctx = MiGramaticaParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            localctx = MiGramaticaParser.ForLoopRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(MiGramaticaParser.T__1)
            self.state = 39
            self.match(MiGramaticaParser.T__2)
            self.state = 42
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.state = 40
                self.asignacion()
                pass
            elif token in [6, 7, 8]:
                self.state = 41
                self.declaracion()
                pass
            elif token in [1]:
                pass
            else:
                pass
            self.state = 44
            self.match(MiGramaticaParser.T__0)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 100663304) != 0):
                self.state = 45
                self.condicion()


            self.state = 48
            self.match(MiGramaticaParser.T__0)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 49
                self.expresionIncremento()


            self.state = 52
            self.match(MiGramaticaParser.T__3)
            self.state = 53
            localctx.cuerpo = self.sentencia()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiGramaticaParser.RULE_declaracion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclaracionRuleContext(DeclaracionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.DeclaracionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tipo(self):
            return self.getTypedRuleContext(MiGramaticaParser.TipoContext,0)

        def ID(self):
            return self.getToken(MiGramaticaParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(MiGramaticaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionRule" ):
                listener.enterDeclaracionRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionRule" ):
                listener.exitDeclaracionRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionRule" ):
                return visitor.visitDeclaracionRule(self)
            else:
                return visitor.visitChildren(self)



    def declaracion(self):

        localctx = MiGramaticaParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracion)
        try:
            localctx = MiGramaticaParser.DeclaracionRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.tipo()
            self.state = 56
            self.match(MiGramaticaParser.ID)
            self.state = 57
            self.match(MiGramaticaParser.T__4)
            self.state = 58
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiGramaticaParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = MiGramaticaParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiGramaticaParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiGramaticaParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiGramaticaParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = MiGramaticaParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(MiGramaticaParser.T__8)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33556996) != 0):
                self.state = 63
                self.sentencia()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 64
                    self.match(MiGramaticaParser.T__0)


                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(MiGramaticaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfElseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiGramaticaParser.RULE_ifElseStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfElseRuleContext(IfElseStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.IfElseStmtContext
            super().__init__(parser)
            self.thenPart = None # SentenciaContext
            self.elsePart = None # SentenciaContext
            self.copyFrom(ctx)

        def condicion(self):
            return self.getTypedRuleContext(MiGramaticaParser.CondicionContext,0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiGramaticaParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiGramaticaParser.SentenciaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseRule" ):
                listener.enterIfElseRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseRule" ):
                listener.exitIfElseRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseRule" ):
                return visitor.visitIfElseRule(self)
            else:
                return visitor.visitChildren(self)



    def ifElseStmt(self):

        localctx = MiGramaticaParser.IfElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifElseStmt)
        try:
            localctx = MiGramaticaParser.IfElseRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(MiGramaticaParser.T__10)
            self.state = 75
            self.match(MiGramaticaParser.T__2)
            self.state = 76
            self.condicion()
            self.state = 77
            self.match(MiGramaticaParser.T__3)
            self.state = 78
            localctx.thenPart = self.sentencia()
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 79
                self.match(MiGramaticaParser.T__11)
                self.state = 80
                localctx.elsePart = self.sentencia()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiGramaticaParser.RULE_condicion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondicionRuleContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.CondicionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiGramaticaParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiGramaticaParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicionRule" ):
                listener.enterCondicionRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicionRule" ):
                listener.exitCondicionRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicionRule" ):
                return visitor.visitCondicionRule(self)
            else:
                return visitor.visitChildren(self)


    class SoloExpresionContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.CondicionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiGramaticaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSoloExpresion" ):
                listener.enterSoloExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSoloExpresion" ):
                listener.exitSoloExpresion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSoloExpresion" ):
                return visitor.visitSoloExpresion(self)
            else:
                return visitor.visitChildren(self)



    def condicion(self):

        localctx = MiGramaticaParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = MiGramaticaParser.CondicionRuleContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.expr(0)
                self.state = 84
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 516096) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 85
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = MiGramaticaParser.SoloExpresionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiGramaticaParser.RULE_asignacion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignRuleContext(AsignacionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.AsignacionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiGramaticaParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(MiGramaticaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignRule" ):
                listener.enterAssignRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignRule" ):
                listener.exitAssignRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignRule" ):
                return visitor.visitAssignRule(self)
            else:
                return visitor.visitChildren(self)



    def asignacion(self):

        localctx = MiGramaticaParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_asignacion)
        try:
            localctx = MiGramaticaParser.AssignRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(MiGramaticaParser.ID)
            self.state = 91
            self.match(MiGramaticaParser.T__4)
            self.state = 92
            self.expr(0)
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 93
                self.match(MiGramaticaParser.T__0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionIncrementoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiGramaticaParser.RULE_expresionIncremento

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IncrementoRuleContext(ExpresionIncrementoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.ExpresionIncrementoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiGramaticaParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncrementoRule" ):
                listener.enterIncrementoRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncrementoRule" ):
                listener.exitIncrementoRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncrementoRule" ):
                return visitor.visitIncrementoRule(self)
            else:
                return visitor.visitChildren(self)


    class DecrementoRuleContext(ExpresionIncrementoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.ExpresionIncrementoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiGramaticaParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecrementoRule" ):
                listener.enterDecrementoRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecrementoRule" ):
                listener.exitDecrementoRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecrementoRule" ):
                return visitor.visitDecrementoRule(self)
            else:
                return visitor.visitChildren(self)


    class AsignacionIncrRuleContext(ExpresionIncrementoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.ExpresionIncrementoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiGramaticaParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(MiGramaticaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacionIncrRule" ):
                listener.enterAsignacionIncrRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacionIncrRule" ):
                listener.exitAsignacionIncrRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacionIncrRule" ):
                return visitor.visitAsignacionIncrRule(self)
            else:
                return visitor.visitChildren(self)



    def expresionIncremento(self):

        localctx = MiGramaticaParser.ExpresionIncrementoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expresionIncremento)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = MiGramaticaParser.IncrementoRuleContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(MiGramaticaParser.ID)
                self.state = 97
                self.match(MiGramaticaParser.T__18)
                pass

            elif la_ == 2:
                localctx = MiGramaticaParser.DecrementoRuleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(MiGramaticaParser.ID)
                self.state = 99
                self.match(MiGramaticaParser.T__19)
                pass

            elif la_ == 3:
                localctx = MiGramaticaParser.AsignacionIncrRuleContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.match(MiGramaticaParser.ID)
                self.state = 101
                self.match(MiGramaticaParser.T__4)
                self.state = 102
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiGramaticaParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddSubRuleContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiGramaticaParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiGramaticaParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSubRule" ):
                listener.enterAddSubRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSubRule" ):
                listener.exitAddSubRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSubRule" ):
                return visitor.visitAddSubRule(self)
            else:
                return visitor.visitChildren(self)


    class ParensRuleContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiGramaticaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParensRule" ):
                listener.enterParensRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParensRule" ):
                listener.exitParensRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParensRule" ):
                return visitor.visitParensRule(self)
            else:
                return visitor.visitChildren(self)


    class VariableRuleContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiGramaticaParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableRule" ):
                listener.enterVariableRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableRule" ):
                listener.exitVariableRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableRule" ):
                return visitor.visitVariableRule(self)
            else:
                return visitor.visitChildren(self)


    class IntRuleContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(MiGramaticaParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntRule" ):
                listener.enterIntRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntRule" ):
                listener.exitIntRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntRule" ):
                return visitor.visitIntRule(self)
            else:
                return visitor.visitChildren(self)


    class MulDivRuleContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiGramaticaParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiGramaticaParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiGramaticaParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivRule" ):
                listener.enterMulDivRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivRule" ):
                listener.exitMulDivRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivRule" ):
                return visitor.visitMulDivRule(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiGramaticaParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                localctx = MiGramaticaParser.IntRuleContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
